tests-integration/fixtures/checking/279_derive_newtype_recursive_record/Main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
Nothing :: forall (@a :: Type). Maybe (a :: Type)
Just :: forall (@a :: Type). (a :: Type) -> Maybe (a :: Type)
List ::
  forall (t2 :: Type) (@a :: (t2 :: Type)).
    { head :: Int, tail :: Maybe (List @(t2 :: Type) (a :: (t2 :: Type))) } ->
    List @(t2 :: Type) (a :: (t2 :: Type))

Types
Maybe :: Type -> Type
List :: forall (t2 :: Type). (t2 :: Type) -> Type

Instances
instance forall (t3 :: Type). Eq (t3 :: Type) => Eq (Maybe (t3 :: Type))

Derived
derive forall (t4 :: Type). Eq (t4 :: Type) => Eq (List @Type (t4 :: Type))

Roles
Maybe = [Representational]
List = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Eq ?13
  --> 12:1..12:44
   |
12 | derive newtype instance Eq a => Eq (List a)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
